<resources>
    <string name="app_name">Veículos</string>
    <string name="carregando">Carregando...</string>
    <string name="falha_carregar">Ocorreu um erro ao carregar dados.</string>

    <string name="label_cadastro">Cadastro de Veículo</string>
    <string name="label_update">Atualização de Veículo</string>
    <string name="label_marca">Marca</string>
    <string name="label_modelo">Modelo</string>
    <string name="label_cor">Cor</string>
    <string name="label_salvar">Salvar</string>
    <string name="label_limpar">Limpar</string>
    <string name="label_placa">Placa</string>
    <string name="label_lista_vazia">Não há itens na lista.</string>

    <string name="tab_news">Notícias</string>
    <string name="tab_lista_local">Lista</string>
    <string name="tab_form">Cadastro</string>


    <string name="operacao_adicionado">adicionada</string>
    <string name="operacao_atualizado">atualizada</string>
    <string name="operacao_excluido">excluida</string>

    <string name="atualiza_veiculo">Placa já cadastrada. Deseja atualizar os outros valores?</string>
    <string name="exclui_veiculo">Deseja excluir o veículo?</string>
    <string name="dialog_veiculo_sim">Sim</string>
    <string name="dialog_veiculo_nao">Não</string>
</resources>
