<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.form.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/label_cadastro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_cadastro"
                style="@style/Base.TextAppearance.AppCompat.Large"
                />

            <!--  Marca -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/text_marca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/label_marca" />
            </android.support.design.widget.TextInputLayout>

            <!-- Modelo -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/text_modelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/label_modelo" />
            </android.support.design.widget.TextInputLayout>

            <!-- Placa -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/text_placa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/label_placa"/>
            </android.support.design.widget.TextInputLayout>


            <!-- Cor -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:text="@string/label_cor"
                    android:gravity="center"
                    />

                <ImageButton
                    android:id="@+id/btn_cor"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    />
            </LinearLayout>


            <!-- Salvar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_limpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/label_limpar"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/label_salvar"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
